src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_detect_markers_with_confidence_fill")]
        internal static extern int ArucoDetectorDetectMarkersWithConfidenceFill(IntPtr detector, IntPtr image, int* cornerOffsets, int cornerOffsetCapacity, Point2fNative* corners, int cornerCapacity, int* ids, int idCapacity, float* confidence, int confidenceCapacity, int* rejectedOffsets, int rejectedOffsetCapacity, Point2fNative* rejectedPoints, int rejectedPointCapacity, out int markerCount, out int cornerPointCount, out int rejectedCount, out int rejectedPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_refine_detected_markers_count")]
        internal static extern int ArucoDetectorRefineDetectedMarkersCount(IntPtr detector, IntPtr image, IntPtr board, int* detectedOffsets, int detectedGroupCount, Point2fNative* detectedPoints, int detectedPointCount, int* detectedIds, int detectedIdCount, int* rejectedOffsets, int rejectedGroupCount, Point2fNative* rejectedPoints, int rejectedPointCount, IntPtr cameraMatrix, IntPtr distCoeffs, out int refinedMarkerCount, out int refinedCornerPointCount, out int refinedRejectedCount, out int refinedRejectedPointCount, out int recoveredIndexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_refine_detected_markers_fill")]
        internal static extern int ArucoDetectorRefineDetectedMarkersFill(IntPtr detector, IntPtr image, IntPtr board, int* detectedOffsets, int detectedGroupCount, Point2fNative* detectedPoints, int detectedPointCount, int* detectedIds, int detectedIdCount, int* rejectedOffsets, int rejectedGroupCount, Point2fNative* rejectedPoints, int rejectedPointCount, IntPtr cameraMatrix, IntPtr distCoeffs, int* refinedOffsets, int refinedOffsetCapacity, Point2fNative* refinedPoints, int refinedPointCapacity, int* refinedIds, int refinedIdCapacity, int* refinedRejectedOffsets, int refinedRejectedOffsetCapacity, Point2fNative* refinedRejectedPoints, int refinedRejectedPointCapacity, int* recoveredIndices, int recoveredIndexCapacity, out int refinedMarkerCount, out int refinedCornerPointCount, out int refinedRejectedCount, out int refinedRejectedPointCount, out int recoveredIndexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_create")]
        internal static extern int ArucoGridBoardCreate(int markersX, int markersY, float markerLength, float markerSeparation, IntPtr dictionary, int[] ids, int idCount, out IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_create")]
        internal static extern int ArucoGridBoardCreate(int markersX, int markersY, float markerLength, float markerSeparation, IntPtr dictionary, int* ids, int idCount, out IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_release_handle")]
        internal static extern void ArucoGridBoardReleaseHandle(IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_get_grid_size")]
        internal static extern int ArucoGridBoardGetGridSize(IntPtr board, out int markersX, out int markersY);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_get_marker_length")]
        internal static extern int ArucoGridBoardGetMarkerLength(IntPtr board, out float markerLength);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_get_marker_separation")]
        internal static extern int ArucoGridBoardGetMarkerSeparation(IntPtr board, out float markerSeparation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_grid_board_generate_image")]
        internal static extern int ArucoGridBoardGenerateImage(IntPtr board, int width, int height, IntPtr image, int marginSize, int borderBits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_create")]
        internal static extern int ArucoCharucoBoardCreate(int squaresX, int squaresY, float squareLength, float markerLength, IntPtr dictionary, int[] ids, int idCount, out IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_create")]
        internal static extern int ArucoCharucoBoardCreate(int squaresX, int squaresY, float squareLength, float markerLength, IntPtr dictionary, int* ids, int idCount, out IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_release_handle")]
        internal static extern void ArucoCharucoBoardReleaseHandle(IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_chessboard_size")]
        internal static extern int ArucoCharucoBoardGetChessboardSize(IntPtr board, out int squaresX, out int squaresY);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_square_length")]
        internal static extern int ArucoCharucoBoardGetSquareLength(IntPtr board, out float squareLength);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_marker_length")]
        internal static extern int ArucoCharucoBoardGetMarkerLength(IntPtr board, out float markerLength);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_legacy_pattern")]
        internal static extern int ArucoCharucoBoardGetLegacyPattern(IntPtr board, out int legacyPattern);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_set_legacy_pattern")]
        internal static extern int ArucoCharucoBoardSetLegacyPattern(IntPtr board, int legacyPattern);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_chessboard_corners_count")]
        internal static extern int ArucoCharucoBoardGetChessboardCornersCount(IntPtr board, out int cornerCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_chessboard_corners_fill")]
        internal static extern int ArucoCharucoBoardGetChessboardCornersFill(IntPtr board, Point3fNative* corners, int cornerCapacity, out int cornerCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_check_corners_collinear")]
        internal static extern int ArucoCharucoBoardCheckCornersCollinear(IntPtr board, int[] charucoIds, int charucoIdCount, out int collinear);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_check_corners_collinear")]
        internal static extern int ArucoCharucoBoardCheckCornersCollinear(IntPtr board, int* charucoIds, int charucoIdCount, out int collinear);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_generate_image")]
        internal static extern int ArucoCharucoBoardGenerateImage(IntPtr board, int width, int height, IntPtr image, int marginSize, int borderBits);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_create")]
        internal static extern int ArucoCharucoDetectorCreate(IntPtr board, ref ArucoCharucoParamsNative charucoParameters, IntPtr cameraMatrix, IntPtr distCoeffs, ref ArucoDetectorParamsNative detectorParameters, ref ArucoRefineParamsNative refineParameters, out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_release_handle")]
        internal static extern void ArucoCharucoDetectorReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_get_board")]
        internal static extern int ArucoCharucoDetectorGetBoard(IntPtr detector, out IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_set_board")]
        internal static extern int ArucoCharucoDetectorSetBoard(IntPtr detector, IntPtr board);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_get_charuco_parameters")]
        internal static extern int ArucoCharucoDetectorGetCharucoParameters(IntPtr detector, out ArucoCharucoParamsNative parameters, out IntPtr cameraMatrix, out IntPtr distCoeffs);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_set_charuco_parameters")]
        internal static extern int ArucoCharucoDetectorSetCharucoParameters(IntPtr detector, ref ArucoCharucoParamsNative parameters, IntPtr cameraMatrix, IntPtr distCoeffs);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_detect_board_count")]
        internal static extern int ArucoCharucoDetectorDetectBoardCount(IntPtr detector, IntPtr image, int* inputMarkerOffsets, int inputMarkerGroupCount, Point2fNative* inputMarkerPoints, int inputMarkerPointCount, int* inputMarkerIds, int inputMarkerIdCount, out int charucoCount, out int markerCount, out int markerPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_detect_board_fill")]
        internal static extern int ArucoCharucoDetectorDetectBoardFill(IntPtr detector, IntPtr image, int* inputMarkerOffsets, int inputMarkerGroupCount, Point2fNative* inputMarkerPoints, int inputMarkerPointCount, int* inputMarkerIds, int inputMarkerIdCount, Point2fNative* charucoCorners, int charucoCornerCapacity, int* charucoIds, int charucoIdCapacity, int* markerOffsets, int markerOffsetCapacity, Point2fNative* markerCorners, int markerCornerCapacity, int* markerIds, int markerIdCapacity, out int charucoCount, out int markerCount, out int markerPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_create")]
        internal static extern int MccCheckerCreate(out IntPtr checker);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_release_handle")]
        internal static extern void MccCheckerReleaseHandle(IntPtr checker);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_target")]
        internal static extern int MccCheckerGetTarget(IntPtr checker, out int target);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_target")]
        internal static extern int MccCheckerSetTarget(IntPtr checker, int target);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_box_count")]
        internal static extern int MccCheckerGetBoxCount(IntPtr checker, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_box_fill")]
        internal static extern int MccCheckerGetBoxFill(IntPtr checker, Point2fNative* points, int pointCapacity, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_box")]
        internal static extern int MccCheckerSetBox(IntPtr checker, Point2fNative* points, int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_color_charts_count")]
        internal static extern int MccCheckerGetColorChartsCount(IntPtr checker, out int pointCount);
